--- a/aur-repo/kpatch-git/PKGBUILD
+++ b/aur-repo/kpatch-git/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Quey-Liang Kao <s101062801@m101.nthu.edu.tw>
 
 pkgname=kpatch-git
-pkgver=0.9.9.r60.g891c6b0
+pkgver=0.9.9.r62.g8cb8420
 pkgrel=1
 pkgdesc='Live kernel patching (git)'
 arch=(i686 x86_64)
