--- a/aur-repo/python-comtool/lilac.yaml
+++ b/aur-repo/python-comtool/lilac.yaml
@@ -1,16 +1,16 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 update_on:
-  - source: pypi
-    pypi: COMTool
+  - source: github
+    github: Neutree/COMTool
+    use_latest_release: true
+    prefix: v
   - alias: python
+# - source: pypi
+#   pypi: COMTool
