--- a/aur-repo/libpldm-git/PKGBUILD
+++ b/aur-repo/libpldm-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=libpldm-git
-pkgver=0.10.0.r1.g1be1d5e
+pkgver=0.10.0.r2.g56ef86a
 pkgrel=1
 epoch=
 pkgdesc="This is a library which deals with the encoding and decoding of PLDM messages."
