jlink-software-and-documentation: auto updated to 62:8.10g-0

--- a/aur-repo/jlink-software-and-documentation/PKGBUILD
+++ b/aur-repo/jlink-software-and-documentation/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: pzl <alsoelp at gmail dot com>
 
 pkgname=jlink-software-and-documentation
-pkgver=8.10f
+pkgver=8.10g
 pkgrel=0
 epoch=62
 pkgdesc="Segger JLink software & documentation pack for Linux"
@@ -37,10 +37,10 @@ desktops=(
         "JTAGLoadExe.desktop"
 )
 source+=(${desktops[@]})
-md5sums_x86_64=('b8857fb56ea0cfe7455621ef3c7a75cd')
-md5sums_i686=('fcd24b3556ec2d976f4cff05673953f9')
-md5sums_aarch64=('2ec8080e5b5322a20dacb298ca44a3fc')
-md5sums_armv7h=('3dd0bf8a58e9b3306e9e5edcef9b73b0')
+md5sums_x86_64=('21f121cbb909a2f57bcb03f622ef23de')
+md5sums_i686=('955b4f86cddd2d5c639d9c731dc228be')
+md5sums_aarch64=('254ce715816cf80e74f870c7b689687f')
+md5sums_armv7h=('cf28b3b2081cacd846deb20dddf07ad0')
 
 md5sums=("a57d93b791581c1f36e4c672303bb85d"
          "02c4941650a2bd345b03dd958313d4c5"
