--- a/aur-repo/python-kicadmodtree/PKGBUILD
+++ b/aur-repo/python-kicadmodtree/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=python-kicadmodtree
-pkgver=1.1.2.r696.g096ea6f
-pkgrel=2
+pkgver=1.1.2.r699.g74dc61b
+pkgrel=1
 epoch=
 pkgdesc="This repository contains scripts to generate custom KiCAD footprints using python, and a framework which allows us to create custom KiCAD footprint. A big bunch of footprints of the KiCad library was developed using this framework."
 arch=('any')
