--- a/aur-repo/liteloader-qqnt-bin/lilac.yaml
+++ b/aur-repo/liteloader-qqnt-bin/lilac.yaml
@@ -3,7 +3,7 @@ maintainers:
 pre_build_script: aur_pre_build(maintainers=['kobe-koto', 'Kevin_Liu'])
 post_build: aur_post_build
 repo_depends:
-  - linuxqq-nt-bwrap
+  - linuxqq
 update_on:
   - source: aur
     aur: liteloader-qqnt-bin
