--- a/aur-repo/purc-git/PKGBUILD
+++ b/aur-repo/purc-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgbase=purc-git
 pkgname=purc-git
-pkgver=0.9.19.r0.g414685841
+pkgver=0.9.19.r26.g1e47c60c2
 pkgrel=1
 pkgdesc="The prime HVML interpreter for C/C++ Language."
 arch=(x86_64
