--- a/aur-repo/xguipro-git/PKGBUILD
+++ b/aur-repo/xguipro-git/PKGBUILD
@@ -16,59 +16,65 @@ url="https://github.com/HVML/xGUI-Pro"
 license=('LGPL-3.0-only')
 groups=(hvml-git
     hybridos2-git)
-provides=(${pkgbase%-git}  'xGUI-Pro' 'run-xguipro')
-conflicts=(${pkgbase%-git})
+provides=(${pkgbase%-git} 'xGUI-Pro' 'run-xguipro')
+provides=(${pkgbase%-git} 'xGUI-Pro' 'run-xguipro')
+conflicts=(${pkgbase%-git} 'xGUI-Pro' 'run-xguipro')
 replaces=()
 depends=(
-# xguipro-gtk3
-#     webkit2gtk
-# # xguipro-gtk4
-    webkit2gtk-3.0-hvml
-    curl
-    enchant
+    # xguipro-gtk3
+    webkit2gtk
+    # xguipro-gtk4
+    #     webkit2gtk-4.1
+    sh
+    at-spi2-core
+    cairo
+    gdk-pixbuf2
     glib2
-    gperf
-    libxml2
+    glibc
+    harfbuzz
     icu
     openssl
+    pango
     purc
-    python
-    ruby
-    sqlite
     zlib
-        )
+)
 makedepends=(
     ccache
     cmake
+    curl
+    enchant
+    glib2-devel
     git
+    gperf
     base-devel
     ninja
+    ruby
     pkgconf
-#     clang
-#     llvm
+    clang
+    llvm
 
-# # xguipro-gtk3
+    # xguipro-gtk3
     gtk3
-#     libsoup
-# # xguipro-gtk4
-#    gtk4
-    libsoup3
-            )
+    libsoup
+    # xguipro-gtk4
+    #     gtk4
+    #     libsoup3
+)
 optdepends=('webkit2gtk-hvml: to support two HVML-specific attributes hvml-handle and hvml-events. This tailored WebKit engine provides support for two ports: GTK+ and HybridOS (MiniGUI). ')
 backup=()
-options=()
+options=('!strip')
 install=
-source=("${pkgbase%-git}::git+${url}.git")
+source=("${pkgbase}::git+${url}.git")
 sha256sums=('SKIP')
 
 pkgver() {
-    cd "${srcdir}/${pkgbase%-git}/"
+    cd "${srcdir}/${pkgbase}/"
     git describe --long --tags | sed 's/ver.//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
-    git -C "${srcdir}/${pkgbase%-git}" clean -dfx
-    
+    git -C "${srcdir}/${pkgbase}" clean -dfx
+
     install -Dm644 /dev/stdin ${srcdir}/xguipro.csh <<EOF
 if (! \$?WEBKIT_WEBEXT_DIR ) then
     set WEBKIT_WEBEXT_DIR=/usr/lib/xguipro/
@@ -86,7 +92,7 @@ if [ -z "\$WEBKIT_WEBEXT_DIR" ]; then
 fi
 EOF
 
-    install -Dm0755 /dev/stdin ${srcdir}/run-xguipro << EOF
+    install -Dm0755 /dev/stdin ${srcdir}/run-xguipro <<EOF
 #!/usr/bin/env bash
 
 set -e
@@ -110,53 +116,61 @@ package_xguipro-gtk3-git() {
     pkgdesc+=" (gtk3)"
     conflicts+=(${pkgname%-git})
     depends+=(
-#         webkit2gtk-4.1
-        webkit2gtk-3.0-hvml
+        webkit2gtk
         gtk3
-        libsoup3)
+        libsoup)
     options=('!strip')
 
-    cd "${srcdir}/${pkgbase%-git}"
+    export LDFLAGS="-L/lib64"
+    if test -n "$LD_LIBRARY_PATH"; then
+        export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/lib64"
+    else
+        export LD_LIBRARY_PATH=/lib64
+    fi
 
-# Ninja build
-# see：https://wiki.archlinux.org/title/CMake_package_guidelines
-# gcc build
-#     cmake -DCMAKE_BUILD_TYPE=Release \
+    cd "${srcdir}/${pkgbase}"
+
+    # Ninja build
+    # see：https://wiki.archlinux.org/title/CMake_package_guidelines
+    # gcc build
+    #     cmake -DCMAKE_BUILD_TYPE=Release \
+    #     cmake -DCMAKE_BUILD_TYPE=None \
+    #         -DPORT=GTK \
+    #         -DENABLE_GAMEPAD=OFF \
+    #         -DENABLE_INTROSPECTION=OFF \
+    #         -DUSE_GTK4=OFF \
+    #         -DUSE_SOUP2=ON \
+    #         -DUSE_WPE_RENDERER=OFF \
+    #         -DUSE_LCMS=OFF \
+    #         -DCMAKE_INSTALL_PREFIX=/usr \
+    #         -DCMAKE_INSTALL_LIBDIR=lib \
+    #         -DCMAKE_INSTALL_LIBEXECDIR=lib \
+    #         -B build-gtk3 \
+    #         -G Ninja
+
+    # clang build
     cmake -DCMAKE_BUILD_TYPE=None \
         -DPORT=GTK \
         -DENABLE_GAMEPAD=OFF \
         -DENABLE_INTROSPECTION=OFF \
         -DUSE_GTK4=OFF \
-        -DUSE_SOUP2=OFF \
+        -DUSE_SOUP2=ON \
         -DUSE_WPE_RENDERER=OFF \
         -DUSE_LCMS=OFF \
         -DCMAKE_INSTALL_PREFIX=/usr \
         -DCMAKE_INSTALL_LIBDIR=lib \
         -DCMAKE_INSTALL_LIBEXECDIR=lib \
+        -DCMAKE_CXX_COMPILER=clang++ \
+        -DCMAKE_C_COMPILER=clang \
+        -Wno-deprecated-declarations \
         -B build-gtk3 \
         -G Ninja
+    #        -Wno-dev \
 
-# clang build
-#     cmake -DCMAKE_BUILD_TYPE=None \
-#         -DPORT=GTK \
-#         -DENABLE_GAMEPAD=OFF \
-#         -DENABLE_INTROSPECTION=OFF \
-#         -DUSE_GTK4=OFF \
-#         -DUSE_SOUP2=OFF \
-#         -DUSE_WPE_RENDERER=OFF \
-#         -DUSE_LCMS=OFF \
-#         -DCMAKE_INSTALL_PREFIX=/usr \
-#         -DCMAKE_INSTALL_LIBDIR=lib \
-#         -DCMAKE_INSTALL_LIBEXECDIR=lib \
-#         -DCMAKE_CXX_COMPILER=clang++ \
-#         -DCMAKE_C_COMPILER=clang \
-#         -B build-gtk3 \
-#         -G Ninja
+    ninja -C build-gtk3
 
-    ninja -C "${srcdir}/${pkgbase%-git}"/build-gtk3
-
-# ninja install
-    DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgbase%-git}/build-gtk3 install
+    # ninja install
+    DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgbase}/build-gtk3 install
 
     install -Dm644 ${srcdir}/xguipro.csh ${pkgdir}/etc/profile.d/xguipro.csh
     install -Dm644 ${srcdir}/xguipro.sh ${pkgdir}/etc/profile.d/xguipro.sh
@@ -167,32 +181,39 @@ package_xguipro-gtk3-git() {
 #     pkgdesc+=" (gtk4)"
 #     conflicts+=(${pkgname%-git})
 #     depends+=(
-#         webkit2gtk-5.0
+#         #         webkit2gtk-4.1
 #         gtk4
 #         libsoup3)
 #     options=('!strip')
 #
-#     cd "${srcdir}/${pkgbase%-git}"
+#     export LDFLAGS="-L/lib64"
+#     if test -n "$LD_LIBRARY_PATH"; then
+#         export LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/lib64"
+#     else
+#         export LD_LIBRARY_PATH=/lib64
+#     fi
 #
-# # Ninja build
-# # see：https://wiki.archlinux.org/title/CMake_package_guidelines
-# #     cmake -DCMAKE_BUILD_TYPE=Release \
-# gcc build
-#     cmake -DCMAKE_BUILD_TYPE=None \
-#         -DPORT=GTK \
-#         -DENABLE_GAMEPAD=OFF \
-#         -DENABLE_INTROSPECTION=OFF \
-#         -DUSE_GTK4=ON \
-#         -DUSE_SOUP2=OFF \
-#         -DUSE_WPE_RENDERER=OFF \
-#         -DUSE_LCMS=OFF \
-#         -DCMAKE_INSTALL_PREFIX=/usr \
-#         -DCMAKE_INSTALL_LIBDIR=lib \
-#         -DCMAKE_INSTALL_LIBEXECDIR=lib \
-#         -B build-gtk4 \
-#         -G Ninja
+#     cd "${srcdir}/${pkgbase}"
 #
-# clang build
+#     # Ninja build
+#     # see：https://wiki.archlinux.org/title/CMake_package_guidelines
+#     #     cmake -DCMAKE_BUILD_TYPE=Release \
+#     #     gcc build
+#     #     cmake -DCMAKE_BUILD_TYPE=None \
+#     #         -DPORT=GTK \
+#     #         -DENABLE_GAMEPAD=OFF \
+#     #         -DENABLE_INTROSPECTION=OFF \
+#     #         -DUSE_GTK4=ON \
+#     #         -DUSE_SOUP2=OFF \
+#     #         -DUSE_WPE_RENDERER=OFF \
+#     #         -DUSE_LCMS=OFF \
+#     #         -DCMAKE_INSTALL_PREFIX=/usr \
+#     #         -DCMAKE_INSTALL_LIBDIR=lib \
+#     #         -DCMAKE_INSTALL_LIBEXECDIR=lib \
+#     #         -B build-gtk4 \
+#     #         -G Ninja
+#     #
+#     #     clang build
 #     cmake -DCMAKE_BUILD_TYPE=None \
 #         -DPORT=GTK \
 #         -DENABLE_GAMEPAD=OFF \
@@ -206,13 +227,15 @@ package_xguipro-gtk3-git() {
 #         -DCMAKE_INSTALL_LIBEXECDIR=lib \
 #         -DCMAKE_CXX_COMPILER=clang++ \
 #         -DCMAKE_C_COMPILER=clang \
+#         -Wno-deprecated-declarations \
 #         -B build-gtk4 \
 #         -G Ninja
-
+#     #         -Wno-dev \
+#
 #     ninja -C build-gtk4
 #
-# # ninja install
-#     DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgbase%-git}/build-gtk4 install
+#     # ninja install
+#     DESTDIR="${pkgdir}" ninja -C "${srcdir}"/${pkgbase}/build-gtk4 install
 #
 #     install -Dm644 ${srcdir}/xguipro.csh ${pkgdir}/etc/profile.d/xguipro.csh
 #     install -Dm644 ${srcdir}/xguipro.sh ${pkgdir}/etc/profile.d/xguipro.sh
