--- a/aur-repo/xguipro-git/lilac.yaml
+++ b/aur-repo/xguipro-git/lilac.yaml
@@ -1,19 +1,14 @@
 maintainers:
   - github: taotieren
-
 build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 repo_depends:
   - purc-git
-  - webkit2gtk-3.0-hvml
-
+  # - webkit2gtk-3.0-hvml
 update_on:
   - source: github
     github: HVML/xGUI-Pro
