sonix-flasher-c-git: auto updated to 2.0.7.r0.gf3ba677-1

--- a/aur-repo/sonix-flasher-c-git/PKGBUILD
+++ b/aur-repo/sonix-flasher-c-git/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=sonix-flasher-c-git
 _gitname=SonixFlasherC
-pkgver=1.1.0.r9.g548174b
+pkgver=2.0.7.r0.gf3ba677
 pkgrel=1
 pkgdesc="A CLI-based Flasher for Sonix 24x/26x MCUs."
 arch=('x86_64' 'aarch64')
@@ -11,6 +11,7 @@ license=('GPL-3.0')
 depends=('glibc'
          'hidapi'
          'libudev.so=1')
+makedepends=('git')
 source=("git+https://github.com/SonixQMK/SonixFlasherC")
 provides=("sonix-flasher-c" "sonixflasher")
 conflicts=("sonix-flasher-c" "sonixflasher")
