--- a/aur-repo/xguipro-git/PKGBUILD
+++ b/aur-repo/xguipro-git/PKGBUILD
@@ -3,7 +3,7 @@
 pkgbase=xguipro-git
 # pkgname=(xguipro-gtk{3,4}-git)
 pkgname=(xguipro-gtk3-git)
-pkgver=0.9.0.r1.gab0c3fe
+pkgver=0.9.0.r5.g342affe
 pkgrel=1
 pkgdesc="xGUI (the X Graphics User Interface) Pro is a modern, cross-platform, and advanced HVML renderer which is based on tailored WebKit."
 arch=(x86_64
