--- a/aur-repo/kibot/PKGBUILD
+++ b/aur-repo/kibot/PKGBUILD
@@ -50,8 +50,8 @@ checkdepends=(python-pytest)
 optdepends=('kicad-interactivehtmlbom: Interactive HTML BOM generation plugin for KiCad'
     'kicad-library: KiCad symbol, footprint and template libraries'
     'kicad-library-3d: KiCad 3D model libraries')
-provides=(kibot pcbdraw kibot-git)
-conflicts=(kibot pcbdraw kibot-git)
+provides=(kibot pcbdraw)
+conflicts=(kibot pcbdraw)
 replaces=()
 backup=()
 options=()
