--- a/aur-repo/kicad-pcb-diff/PKGBUILD
+++ b/aur-repo/kicad-pcb-diff/PKGBUILD
@@ -2,22 +2,23 @@
 
 pkgbase=kicad-pcb-diff
 pkgname=kicad-pcb-diff
-_name=kidff
+_name=kidiff
 pkgver=2.5.5
 pkgrel=0
 epoch=
 pkgdesc="Tool to generate a PDF file showing the changes between two KiCad PCB/SCH files. Also a git plug-in."
 arch=('any')
 url="https://pypi.org/project/kidiff"
-license=('GPL-2.0')
+license=('GPL-2.0-or-later')
 groups=()
 depends=(python
     kicad
-    python-wxpython
-    imagemagick
-    librsvg
-    poppler
-    xdg-utils)
+    #     python-wxpython
+    #     imagemagick
+    #     librsvg
+    #     poppler
+    #     xdg-utils
+)
 makedepends=(python-{build,installer}
     python-setuptools-scm
     python-wheel)
@@ -26,7 +27,7 @@ provides=('kidiff' 'kicad-diff' 'kicad-pcb-diff' 'python-kidiff')
 conflicts=('kidiff' 'kicad-diff' 'kicad-pcb-diff' 'python-kidiff')
 replaces=()
 backup=()
-options=('!strip')
+options=('!strip' '!debug')
 install=
 changelog=
 source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/${_name//-/_}/${_name//-/_}-${pkgver}.tar.gz")
