--- a/aur-repo/pts-tiny-7z-sfx/PKGBUILD
+++ b/aur-repo/pts-tiny-7z-sfx/PKGBUILD
@@ -19,7 +19,7 @@ provides=()
 conflicts=()
 replaces=()
 backup=()
-options=()
+options=('!strip' '!debug')
 install=
 changelog=
 source=("${pkgname}-${pkgver//_/-}.tar.gz::${url}/archive/refs/tags/v${pkgver//_/+}.tar.gz")
@@ -27,7 +27,7 @@ noextract=()
 sha256sums=('9bc7be2f54e0ef789825ac520e3d4a5c53cd208e4c362a915ef4644cb928e9f1')
 #validpgpkeys=()
 
-build(){
+build() {
     cd "${srcdir}"/${pkgname}-${pkgver//_/-}
     make
 }
