--- a/aur-repo/rustdesk-git/lilac.yaml
+++ b/aur-repo/rustdesk-git/lilac.yaml
@@ -1,17 +1,11 @@
 maintainers:
   - github: taotieren
-
+pre_build_script: aur_pre_build(maintainers=['Ataraxy', 'severach',' mgrep1977', 'taotieren'])
 build_prefix: extra-x86_64
-
 pre_build: vcs_update
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
-repo_depends:
-  - vcpkg
-
 update_on:
   - source: github
     github: rustdesk/rustdesk
