--- a/aur-repo/sdbusplus-git/lilac.yaml
+++ b/aur-repo/sdbusplus-git/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='amateurece')
-
+pre_build_script: aur_pre_build(maintainers=['amateurece'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
-    github: sdbusplus-git
+    aur: sdbusplus-git
