--- a/aur-repo/python-scikit-image/lilac.yaml
+++ b/aur-repo/python-scikit-image/lilac.yaml
@@ -1,16 +1,14 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='Universebenzene')
-
+pre_build_script: aur_pre_build(maintainers=['Universebenzene'])
 post_build: aur_post_build
-
 repo_depends:
+  - python-imageio
+  - python-lazy-loader
   - python-tifffile
   - python-imread
   - python-pywavelets
   - python-simpleitk
-
 update_on:
   - source: aur
     aur: python-scikit-image
