--- a/aur-repo/gdcm/lilac.yaml
+++ b/aur-repo/gdcm/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='FabioLolix')
-
+pre_build_script: aur_pre_build(maintainers=['FabioLolix'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: gdcm
