--- a/aur-repo/insight-toolkit/lilac.yaml
+++ b/aur-repo/insight-toolkit/lilac.yaml
@@ -1,13 +1,9 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='FabioLolix')
-
+pre_build_script: aur_pre_build(maintainers=['FabioLolix'])
 post_build: aur_post_build
-
 repo_depends:
   - gdcm
-
 update_on:
   - source: aur
     aur: insight-toolkit
