--- a/aur-repo/simpleitk/lilac.yaml
+++ b/aur-repo/simpleitk/lilac.yaml
@@ -1,13 +1,9 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='m-pilia')
-
+pre_build_script: aur_pre_build(maintainers=['xiota'])
 post_build: aur_post_build
-
 repo_depends:
   - insight-toolkit
-
 update_on:
   - source: aur
     aur: simpleitk
