--- a/aur-repo/python-arm-gdb/PKGBUILD
+++ b/aur-repo/python-arm-gdb/PKGBUILD
@@ -10,8 +10,8 @@ arch=('any')
 url="https://pypi.org/project/arm-gdb"
 license=(MIT)
 groups=()
-provides=(${_name})
-conflicts=(${_name})
+provides=(${_name} ${pkgname})
+conflicts=(${_name} ${pkgname})
 depends=(python
 )
 makedepends=(python-build
