--- a/aur-repo/openocdcfg-generator/lilac.yaml
+++ b/aur-repo/openocdcfg-generator/lilac.yaml
@@ -1,21 +1,16 @@
 maintainers:
   - github: taotieren
-
-build_prefix: extra-x86_64
-
 pre_build_script: |
   update_pkgver_and_pkgrel(_G.newver)
-
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
-
 repo_depends:
   - python-pydevicetree
-
 update_on:
   - source: github
     github: sifive/openocdcfg-generator
-    use_latest_release: true
+    use_max_tag: true
     prefix: v
   - alias: python
+    # use_latest_release: true
