--- a/aur-repo/python-cantools/lilac.yaml
+++ b/aur-repo/python-cantools/lilac.yaml
@@ -1,18 +1,14 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='Maik93')
-
+pre_build_script: aur_pre_build(maintainers=['Maik93'])
 post_build: aur_post_build
-
 repo_depends:
+  - python-argparse-addons
   - python-bitstruct
+  - python-crccheck
   - python-diskcache
   - python-textparser
-
 update_on:
-  - source: github
-    github: cantools/cantools
   - source: aur
     aur: python-cantools
   - alias: python
