--- a/aur-repo/python-pyftdi/PKGBUILD
+++ b/aur-repo/python-pyftdi/PKGBUILD
@@ -2,11 +2,11 @@
 
 _name=pyftdi
 pkgname=python-pyftdi
-pkgver=0.55.4
-pkgrel=3
+pkgver=0.56.0
+pkgrel=0
 pkgdesc="FTDI device driver written in pure Python"
 arch=(any)
-url="https://pypi.org/project/pyftdi"
+url="https://github.com/eblot/pyftdi"
 license=(BSD-3-Clause)
 depends=(
   python
@@ -22,28 +22,28 @@ makedepends=(
 checkdepends=(
   python-ruamel-yaml
 )
-source=("${_name}-${pkgver}.tar.gz::https://files.pythonhosted.org/packages/source/${_name::1}/$_name/$_name-$pkgver.tar.gz")
-sha512sums=('516fa48fe8a12c901d16492be5090d48d4a31c0f249a37735b2cd6df311dbb73ceada711100852573a5c370f2d3094eebb59719f19e52752cb9604ac19ebb2d9')
-b2sums=('355211cfd8a1b75804b363e5d265cbd67fb1a04fd28b4a8c1cbbd3b645c0f4faa4c0ccebbf2870ee9859111206eb6e986d588ee6b8fa010785c42003ec086eac')
+source=("${_name}-${pkgver}.tar.gz::${url}/archive/refs/tags/v$pkgver.tar.gz")
+sha512sums=('203c7032bef534841eff08b5b464b60709803d8b319ab61393c1bc31bba1df45ba538a6f67574d3e840c2e34466cdb68412a4fa442c8c01e0c1a8f1f328656f9')
+b2sums=('cfef1b3c68553aeb11d5739d8a5d87e265af45a52c4e8ec175d9716d992ebe038ae38f7dc73112d3131fa306e86841927396dc4363a4195962095a371d3ecd4a')
 
 build() {
   cd $_name-$pkgver
   python -m build --wheel --no-isolation
 }
 
-# check() {
-#   cd $_name-$pkgver
-#
-#   local site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
-#
-#   # install to temporary location, as importlib is used
-#   python -m installer --destdir=test_dir dist/*.whl
-#   export PYTHONPATH="$_name-$pkgver/test_dir/$site_packages:$PYTHONPATH"
-#   python $_name/tests/mockusb.py
-#   export FTDI_VIRTUAL=on
-#   python $_name/tests/gpio.py
-#   python $_name/tests/eeprom_mock.py
-# }
+check() {
+  cd $_name-$pkgver
+
+  local site_packages=$(python -c "import site; print(site.getsitepackages()[0])")
+
+  # install to temporary location, as importlib is used
+  python -m installer --destdir=test_dir dist/*.whl
+  export PYTHONPATH="$_name-$pkgver/test_dir/$site_packages:$PYTHONPATH"
+  python $_name/tests/mockusb.py
+  export FTDI_VIRTUAL=on
+  python $_name/tests/gpio.py
+  python $_name/tests/eeprom_mock.py
+}
 
 package() {
   cd $_name-$pkgver
