--- a/aur-repo/python-pyftdi/lilac.yaml
+++ b/aur-repo/python-pyftdi/lilac.yaml
@@ -6,6 +6,7 @@ post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
 update_on:
-  - source: pypi
-    pypi: pyftdi
+  - source: github
+    github: eblot/pyftdi
+    use_max_tag: true
   - alias: python
