--- a/aur-repo/mysql/lilac.yaml
+++ b/aur-repo/mysql/lilac.yaml
@@ -1,12 +1,7 @@
 maintainers:
   - github: taotieren
-
-build_prefix: extra-x86_64
-
-pre_build_script: aur_pre_build(maintainers='Muflone')
-
+pre_build_script: aur_pre_build(maintainers=['Muflone'])
 post_build_script: aur_post_build
-
 update_on:
   - source: aur
     aur: mysql
