--- a/aur-repo/qucs-s-git/PKGBUILD
+++ b/aur-repo/qucs-s-git/PKGBUILD
@@ -43,7 +43,7 @@ validpgpkeys=()
 
 pkgver() {
     cd "${srcdir}/${pkgname%-git}"
-    git describe --long --tags | sed 's/^ontinuous_build//g;s/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
+    git describe --long --tags | sed 's/^continuous_build//g;s/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 prepare() {
