--- a/aur-repo/qt5-serialbus-git/PKGBUILD
+++ b/aur-repo/qt5-serialbus-git/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Chocobo1 <chocobo1 AT archlinux DOT net>
 
 pkgname=qt5-serialbus-git
-pkgver=5.15.9.r0.gf8684ae6
+pkgver=5.15.16.r0.g9dfba421
 pkgrel=1
 pkgdesc="Qt5 serial bus module"
 arch=('i686' 'x86_64')
