--- a/aur-repo/python-cstruct/lilac.yaml
+++ b/aur-repo/python-cstruct/lilac.yaml
@@ -1,10 +1,7 @@
 maintainers:
   - github: taotieren
-
-pre_build_script: aur_pre_build(maintainers='justapony')
-
+pre_build_script: aur_pre_build(maintainers=['justapony'])
 post_build: aur_post_build
-
 update_on:
   - source: aur
     aur: python-cstruct
