--- a/aur-repo/python-xmldiff-git/PKGBUILD
+++ b/aur-repo/python-xmldiff-git/PKGBUILD
@@ -7,11 +7,14 @@ pkgdesc='A library and command line utility for diffing xml'
 url='https://github.com/Shoobx/xmldiff'
 license=('MIT')
 arch=(any)
-depends=(python
-         python-lxml
-         python-six)
+depends=(
+    libxslt
+    jade
+    python
+    python-lxml
+    python-six)
 makedepends=(git
-             python-setuptools)
+    python-setuptools)
 provides=("${pkgname%-git}" xmldiff)
 conflicts=("${pkgname%-git}" xmldiff)
 source=("$pkgname::git+$url.git")
@@ -36,4 +39,3 @@ package() {
     cd "$pkgname"
     python setup.py install --root="$pkgdir" --optimize=1 --skip-build
 }
-
