--- a/aur-repo/python-openstep-plist-git/PKGBUILD
+++ b/aur-repo/python-openstep-plist-git/PKGBUILD
@@ -9,11 +9,12 @@ license=('MIT')
 arch=(any)
 depends=(python)
 checkdepends=(python-pytest)
-makedepends=(python-{build,installer}
-              python-setuptools-scm
-              python-wheel
-              cython
-              git)
+makedepends=(
+    python-{build,installer}
+    python-setuptools-scm
+    python-wheel
+    cython
+    git)
 provides=("${pkgname%-git}")
 conflicts=("${pkgname%-git}")
 source=("$pkgname::git+$url.git")
@@ -24,8 +25,7 @@ pkgver() {
     git describe --long --tags | sed 's/^v//g;s/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
-prepare()
-{
+prepare() {
     git -C "${srcdir}/${pkgname}" clean -dfx
 }
 
@@ -36,11 +36,12 @@ build() {
 
 check() {
     cd "$pkgname"
-    python setup.py test
+    local _pyver=$(python -c 'import sys; print("".join(map(str, sys.version_info[:2])))')
+    export PYTHONPATH="$PWD/build/lib.linux-$CARCH-cpython-$_pyver"
+    python -m unittest discover
 }
 
 package() {
     cd "$pkgname"
     python -m installer -d "$pkgdir" dist/*.whl
 }
-
