--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -1,8 +1,8 @@
 # Maintainer: taotieren <admin@taotieren.com>
 
 pkgname=bookget-git
-pkgver=24.1118.2.gabec4cf
-pkgrel=2
+pkgver=24.1118.5.g19aecfb
+pkgrel=1
 pkgdesc="bookget 数字图书馆下载工具，目前支持约50+个数字图书馆。"
 arch=(x86_64
     aarch64
