--- a/aur-repo/bookget-git/lilac.yaml
+++ b/aur-repo/bookget-git/lilac.yaml
@@ -1,6 +1,7 @@
 maintainers:
   - github: taotieren
-pre_build: vcs_update
+pre_build: |
+  update_pkgver_and_pkgrel(_G.newver)
 post_build_script: |
   git_pkgbuild_commit()
   update_aur_repo()
