--- a/aur-repo/python-qsnctf/PKGBUILD
+++ b/aur-repo/python-qsnctf/PKGBUILD
@@ -25,8 +25,8 @@ makedepends=(python-build
     python-wheel)
 checkdepends=()
 optdepends=()
-provides=(qsnctf qsnctf-python)
-conflicts=()
+provides=(${pkgname} qsnctf qsnctf-python)
+conflicts=(${pkgname} qsnctf qsnctf-python)
 replaces=()
 backup=()
 options=('!strip')
