--- a/aur-repo/bookget-git/PKGBUILD
+++ b/aur-repo/bookget-git/PKGBUILD
@@ -4,9 +4,7 @@ pkgname=bookget-git
 pkgver=24.1118.5.g19aecfb
 pkgrel=2
 pkgdesc="bookget 数字图书馆下载工具，目前支持约50+个数字图书馆。"
-arch=(x86_64
-    aarch64
-    riscv64)
+arch=($CARCH)
 url="https://github.com/deweizhu/bookget"
 license=('GPL-3.0-only')
 provides=(${pkgname%-git})
