--- a/aur-repo/hex2bin-git/PKGBUILD
+++ b/aur-repo/hex2bin-git/PKGBUILD
@@ -45,7 +45,7 @@ build() {
 
 check() {
     cd "$srcdir/$pkgname"
-    python test.py -f bin/hex2bin --extra
+    python test.py -f bin/hex2bin
 }
 
 package() {
