--- a/aur-repo/hex2bin-git/PKGBUILD
+++ b/aur-repo/hex2bin-git/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Sasasu <lizhaolong0123@gmail.com>
 
 pkgname=hex2bin-git
-pkgver=1.10.r1.ga8c5676
-pkgrel=2
+pkgver=1.12.r2.g97a58d9
+pkgrel=1
 pkgdesc="Hex to binary converter."
 arch=($CARCH)
 url="https://github.com/Keidan/hex2bin"
