--- a/aur-repo/mtkclient-git/lilac.yaml
+++ b/aur-repo/mtkclient-git/lilac.yaml
@@ -1,6 +1,6 @@
 maintainers:
   - github: taotieren
-pre_build_script: aur_pre_build(maintainers=['BenTheTechGuy', 'xiota'])
+pre_build_script: aur_pre_build(maintainers=['xiota'])
 post_build: aur_post_build
 repo_depends:
   - python-fusepy
